cmake_minimum_required(VERSION 3.2)
project(Epitome3D)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    ../assets/dll/Debug/x64/freeglut.dll
    ../assets/dll/Debug/x64/FW1FontWrapper.dll
    ../assets/dll/Debug/x64/libfbxsdk.dll
    ../assets/dll/Debug/x86/freeglut.dll
    ../assets/dll/Debug/x86/FW1FontWrapper.dll
    ../assets/dll/Debug/x86/libfbxsdk.dll
    ../assets/dll/Release/x64/freeglut.dll
    ../assets/dll/Release/x64/FW1FontWrapper.dll
    ../assets/dll/Release/x64/libfbxsdk.dll
    ../assets/dll/Release/x86/freeglut.dll
    ../assets/dll/Release/x86/FW1FontWrapper.dll
    ../assets/dll/Release/x86/libfbxsdk.dll
    "../assets/image/Cursors/Accurate Click.dds"
    "../assets/image/Cursors/Accurate Click.png"
    ../assets/image/Cursors/Accurate.dds
    ../assets/image/Cursors/Accurate.png
    ../assets/image/Black.dds
    ../assets/image/CheckerboardGrass.dds
    ../assets/image/CheckerboardHill.dds
    ../assets/image/Dirt.dds
    ../assets/image/earth_cloudy_diffuse.jpg
    ../assets/image/Earth_CloudyDiffuse.dds
    ../assets/image/earth_normal.jpg
    ../assets/image/earth_spec.jpg
    ../assets/image/epitome-512-extended3d-white.dds
    ../assets/image/epitome-512-fillblack.dds
    ../assets/image/epitome-512-fillblack.png
    ../assets/image/epitome-512.png
    ../assets/image/Moon.dds
    ../assets/image/Stars.dds
    ../assets/image/Stone.dds
    ../assets/image/Teapot.dds
    ../assets/model/cube.fbx
    ../assets/model/cube.obj
    ../assets/model/sphere.fbx
    ../assets/model/Sphere.txt
    ../assets/model/teapot.fbx
    ../assets/shader/light.hlsl
    ../assets/shader/texture.hlsl
    ../assets/sound/sound01.wav
    src/EPITOME-CORE/error.cpp
    src/EPITOME-CORE/error.h
    src/EPITOME-CORE/init.cpp
    src/EPITOME-CORE/init.h
    src/EPITOME-CORE/system.cpp
    src/EPITOME-CORE/system.h
    src/epitome-core.h
    gcc_Debug.h
    gcc_Release.h
    ../epitome-d3dcore/src/models/model_FBX.cpp
    ../epitome-d3dcore/src/models/model_FBX.h
    ../epitome-d3dcore/src/models/model_OBJ.cpp
    ../epitome-d3dcore/src/models/model_OBJ.h
    ../epitome-d3dcore/src/shaders/shader_LIGHT.cpp
    ../epitome-d3dcore/src/shaders/shader_LIGHT.h
    ../epitome-d3dcore/src/shaders/shader_TEXTURE.cpp
    ../epitome-d3dcore/src/shaders/shader_TEXTURE.h
    ../epitome-d3dcore/src/sounds/sound_WAVEPCM.cpp
    ../epitome-d3dcore/src/sounds/sound_WAVEPCM.h
    ../epitome-d3dcore/src/bitmap.cpp
    ../epitome-d3dcore/src/bitmap.h
    ../epitome-d3dcore/src/camera.cpp
    ../epitome-d3dcore/src/camera.h
    ../epitome-d3dcore/src/cpu.cpp
    ../epitome-d3dcore/src/cpu.h
    ../epitome-d3dcore/src/D3D.cpp
    ../epitome-d3dcore/src/D3D.h
    ../epitome-d3dcore/src/D3Ddesc.cpp
    ../epitome-d3dcore/src/D3Ddesc.h
    ../epitome-d3dcore/src/exception.cpp
    ../epitome-d3dcore/src/exception.h
    ../epitome-d3dcore/src/fps.cpp
    ../epitome-d3dcore/src/fps.h
    ../epitome-d3dcore/src/frustum.cpp
    ../epitome-d3dcore/src/frustum.h
    ../epitome-d3dcore/src/frustumcull.cpp
    ../epitome-d3dcore/src/frustumcull.h
    ../epitome-d3dcore/src/globals.cpp
    ../epitome-d3dcore/src/globals.h
    ../epitome-d3dcore/src/input.cpp
    ../epitome-d3dcore/src/input.h
    ../epitome-d3dcore/src/light.h
    ../epitome-d3dcore/src/math3d.cpp
    ../epitome-d3dcore/src/math3d.h
    ../epitome-d3dcore/src/model.cpp
    ../epitome-d3dcore/src/model.h
    ../epitome-d3dcore/src/painter.cpp
    ../epitome-d3dcore/src/painter.h
    ../epitome-d3dcore/src/resource.h
    ../epitome-d3dcore/src/shader.cpp
    ../epitome-d3dcore/src/shader.h
    ../epitome-d3dcore/src/sound.cpp
    ../epitome-d3dcore/src/sound.h
    ../epitome-d3dcore/src/text.cpp
    ../epitome-d3dcore/src/text.h
    ../epitome-d3dcore/src/texture.cpp
    ../epitome-d3dcore/src/texture.h
    ../epitome-d3dcore/src/timer.cpp
    ../epitome-d3dcore/src/timer.h
    ../epitome-d3dcore/src/viewport.cpp
    ../epitome-d3dcore/src/viewport.h
    ../epitome-d3dcore/src/window.cpp
    ../epitome-d3dcore/src/window.h
    ../epitome-d3dtester/src/main.cpp
    ../epitome-d3dtester/src/main.h
    ../epitome-tester/gcc_Debug.h
    ../epitome-tester/gcc_Release.h
    ../epitome-tester/main.cpp
    ../include/directx/audiodefs.h
    ../include/directx/comdecl.h
    ../include/directx/D2D1.h
    ../include/directx/D2D1Helper.h
    ../include/directx/D2DBaseTypes.h
    ../include/directx/D2Derr.h
    ../include/directx/D3D10.h
    ../include/directx/D3D10_1.h
    ../include/directx/D3D10_1shader.h
    ../include/directx/D3D10effect.h
    ../include/directx/d3d10misc.h
    ../include/directx/d3d10sdklayers.h
    ../include/directx/D3D10shader.h
    ../include/directx/D3D11.h
    ../include/directx/D3D11SDKLayers.h
    ../include/directx/D3D11Shader.h
    ../include/directx/d3d9.h
    ../include/directx/d3d9caps.h
    ../include/directx/d3d9types.h
    ../include/directx/D3Dcommon.h
    ../include/directx/D3Dcompiler.h
    ../include/directx/D3DCSX.h
    ../include/directx/D3DX10.h
    ../include/directx/d3dx10async.h
    ../include/directx/D3DX10core.h
    ../include/directx/D3DX10math.h
    ../include/directx/D3DX10mesh.h
    ../include/directx/D3DX10tex.h
    ../include/directx/D3DX11.h
    ../include/directx/D3DX11async.h
    ../include/directx/D3DX11core.h
    ../include/directx/D3DX11tex.h
    ../include/directx/d3dx9.h
    ../include/directx/d3dx9anim.h
    ../include/directx/d3dx9core.h
    ../include/directx/d3dx9effect.h
    ../include/directx/d3dx9math.h
    ../include/directx/d3dx9mesh.h
    ../include/directx/d3dx9shader.h
    ../include/directx/d3dx9shape.h
    ../include/directx/d3dx9tex.h
    ../include/directx/d3dx9xof.h
    ../include/directx/Dcommon.h
    ../include/directx/dinput.h
    ../include/directx/dinputd.h
    ../include/directx/dsconf.h
    ../include/directx/dsetup.h
    ../include/directx/dsound.h
    ../include/directx/DWrite.h
    ../include/directx/dxdiag.h
    ../include/directx/DxErr.h
    ../include/directx/dxfile.h
    ../include/directx/DXGI.h
    ../include/directx/DXGIFormat.h
    ../include/directx/DXGIType.h
    ../include/directx/dxsdkver.h
    ../include/directx/fbxsdk.h
    ../include/directx/FW1FontWrapper.h
    ../include/directx/gameux.h
    ../include/directx/PIXPlugin.h
    ../include/directx/rmxfguid.h
    ../include/directx/rmxftmpl.h
    ../include/directx/rpcsal.h
    ../include/directx/X3DAudio.h
    ../include/directx/xact3.h
    ../include/directx/xact3d3.h
    ../include/directx/xact3wb.h
    ../include/directx/XAPO.h
    ../include/directx/XAPOBase.h
    ../include/directx/XAPOFX.h
    ../include/directx/XAudio2.h
    ../include/directx/XAudio2fx.h
    ../include/directx/XDSP.h
    ../include/directx/XInput.h
    ../include/directx/xma2defs.h
    ../include/directx/xnamath.h
    ../include/fbxsdk/core/arch/fbxalloc.h
    ../include/fbxsdk/core/arch/fbxarch.h
    ../include/fbxsdk/core/arch/fbxdebug.h
    ../include/fbxsdk/core/arch/fbxnew.h
    ../include/fbxsdk/core/arch/fbxstdcompliant.h
    ../include/fbxsdk/core/arch/fbxtypes.h
    ../include/fbxsdk/core/base/fbxarray.h
    ../include/fbxsdk/core/base/fbxbitset.h
    ../include/fbxsdk/core/base/fbxcharptrset.h
    ../include/fbxsdk/core/base/fbxcontainerallocators.h
    ../include/fbxsdk/core/base/fbxdynamicarray.h
    ../include/fbxsdk/core/base/fbxfile.h
    ../include/fbxsdk/core/base/fbxfolder.h
    ../include/fbxsdk/core/base/fbxhashmap.h
    ../include/fbxsdk/core/base/fbxintrusivelist.h
    ../include/fbxsdk/core/base/fbxmap.h
    ../include/fbxsdk/core/base/fbxmemorypool.h
    ../include/fbxsdk/core/base/fbxpair.h
    ../include/fbxsdk/core/base/fbxredblacktree.h
    ../include/fbxsdk/core/base/fbxset.h
    ../include/fbxsdk/core/base/fbxstatus.h
    ../include/fbxsdk/core/base/fbxstring.h
    ../include/fbxsdk/core/base/fbxstringlist.h
    ../include/fbxsdk/core/base/fbxtime.h
    ../include/fbxsdk/core/base/fbxtimecode.h
    ../include/fbxsdk/core/base/fbxutils.h
    ../include/fbxsdk/core/math/fbxaffinematrix.h
    ../include/fbxsdk/core/math/fbxdualquaternion.h
    ../include/fbxsdk/core/math/fbxmath.h
    ../include/fbxsdk/core/math/fbxmatrix.h
    ../include/fbxsdk/core/math/fbxquaternion.h
    ../include/fbxsdk/core/math/fbxtransforms.h
    ../include/fbxsdk/core/math/fbxvector2.h
    ../include/fbxsdk/core/math/fbxvector4.h
    ../include/fbxsdk/core/sync/fbxatomic.h
    ../include/fbxsdk/core/sync/fbxclock.h
    ../include/fbxsdk/core/sync/fbxsync.h
    ../include/fbxsdk/core/sync/fbxthread.h
    ../include/fbxsdk/core/fbxclassid.h
    ../include/fbxsdk/core/fbxconnectionpoint.h
    ../include/fbxsdk/core/fbxdatatypes.h
    ../include/fbxsdk/core/fbxemitter.h
    ../include/fbxsdk/core/fbxevent.h
    ../include/fbxsdk/core/fbxeventhandler.h
    ../include/fbxsdk/core/fbxlistener.h
    ../include/fbxsdk/core/fbxloadingstrategy.h
    ../include/fbxsdk/core/fbxmanager.h
    ../include/fbxsdk/core/fbxmodule.h
    ../include/fbxsdk/core/fbxobject.h
    ../include/fbxsdk/core/fbxperipheral.h
    ../include/fbxsdk/core/fbxplugin.h
    ../include/fbxsdk/core/fbxplugincontainer.h
    ../include/fbxsdk/core/fbxproperty.h
    ../include/fbxsdk/core/fbxpropertydef.h
    ../include/fbxsdk/core/fbxpropertyhandle.h
    ../include/fbxsdk/core/fbxpropertypage.h
    ../include/fbxsdk/core/fbxpropertytypes.h
    ../include/fbxsdk/core/fbxquery.h
    ../include/fbxsdk/core/fbxqueryevent.h
    ../include/fbxsdk/core/fbxscopedloadingdirectory.h
    ../include/fbxsdk/core/fbxscopedloadingfilename.h
    ../include/fbxsdk/core/fbxstream.h
    ../include/fbxsdk/core/fbxsymbol.h
    ../include/fbxsdk/core/fbxsystemunit.h
    ../include/fbxsdk/core/fbxxref.h
    ../include/fbxsdk/fileio/collada/fbxcolladaanimationelement.h
    ../include/fbxsdk/fileio/collada/fbxcolladaelement.h
    ../include/fbxsdk/fileio/collada/fbxcolladaiostream.h
    ../include/fbxsdk/fileio/collada/fbxcolladanamespace.h
    ../include/fbxsdk/fileio/collada/fbxcolladatokens.h
    ../include/fbxsdk/fileio/collada/fbxcolladautils.h
    ../include/fbxsdk/fileio/collada/fbxreadercollada14.h
    ../include/fbxsdk/fileio/collada/fbxwritercollada14.h
    ../include/fbxsdk/fileio/fbx/fbxio.h
    ../include/fbxsdk/fileio/fbx/fbxreaderfbx5.h
    ../include/fbxsdk/fileio/fbx/fbxreaderfbx6.h
    ../include/fbxsdk/fileio/fbx/fbxreaderfbx7.h
    ../include/fbxsdk/fileio/fbx/fbxwriterfbx5.h
    ../include/fbxsdk/fileio/fbx/fbxwriterfbx6.h
    ../include/fbxsdk/fileio/fbx/fbxwriterfbx7.h
    ../include/fbxsdk/fileio/fbxbase64coder.h
    ../include/fbxsdk/fileio/fbxexporter.h
    ../include/fbxsdk/fileio/fbxexternaldocreflistener.h
    ../include/fbxsdk/fileio/fbxfiletokens.h
    ../include/fbxsdk/fileio/fbxglobalcamerasettings.h
    ../include/fbxsdk/fileio/fbxgloballightsettings.h
    ../include/fbxsdk/fileio/fbxglobalsettings.h
    ../include/fbxsdk/fileio/fbxgobo.h
    ../include/fbxsdk/fileio/fbximporter.h
    ../include/fbxsdk/fileio/fbxiobase.h
    ../include/fbxsdk/fileio/fbxiopluginregistry.h
    ../include/fbxsdk/fileio/fbxiosettings.h
    ../include/fbxsdk/fileio/fbxiosettingspath.h
    ../include/fbxsdk/fileio/fbxprogress.h
    ../include/fbxsdk/fileio/fbxreader.h
    ../include/fbxsdk/fileio/fbxstatistics.h
    ../include/fbxsdk/fileio/fbxstatisticsfbx.h
    ../include/fbxsdk/fileio/fbxwriter.h
    ../include/fbxsdk/scene/animation/fbxanimcurve.h
    ../include/fbxsdk/scene/animation/fbxanimcurvebase.h
    ../include/fbxsdk/scene/animation/fbxanimcurvefilters.h
    ../include/fbxsdk/scene/animation/fbxanimcurvenode.h
    ../include/fbxsdk/scene/animation/fbxanimevalclassic.h
    ../include/fbxsdk/scene/animation/fbxanimevalstate.h
    ../include/fbxsdk/scene/animation/fbxanimevaluator.h
    ../include/fbxsdk/scene/animation/fbxanimlayer.h
    ../include/fbxsdk/scene/animation/fbxanimstack.h
    ../include/fbxsdk/scene/animation/fbxanimutilities.h
    ../include/fbxsdk/scene/constraint/fbxcharacter.h
    ../include/fbxsdk/scene/constraint/fbxcharacternodename.h
    ../include/fbxsdk/scene/constraint/fbxcharacterpose.h
    ../include/fbxsdk/scene/constraint/fbxconstraint.h
    ../include/fbxsdk/scene/constraint/fbxconstraintaim.h
    ../include/fbxsdk/scene/constraint/fbxconstraintcustom.h
    ../include/fbxsdk/scene/constraint/fbxconstraintparent.h
    ../include/fbxsdk/scene/constraint/fbxconstraintposition.h
    ../include/fbxsdk/scene/constraint/fbxconstraintrotation.h
    ../include/fbxsdk/scene/constraint/fbxconstraintscale.h
    ../include/fbxsdk/scene/constraint/fbxconstraintsinglechainik.h
    ../include/fbxsdk/scene/constraint/fbxconstraintutils.h
    ../include/fbxsdk/scene/constraint/fbxcontrolset.h
    ../include/fbxsdk/scene/constraint/fbxhik2fbxcharacter.h
    ../include/fbxsdk/scene/geometry/fbxblendshape.h
    ../include/fbxsdk/scene/geometry/fbxblendshapechannel.h
    ../include/fbxsdk/scene/geometry/fbxcache.h
    ../include/fbxsdk/scene/geometry/fbxcachedeffect.h
    ../include/fbxsdk/scene/geometry/fbxcamera.h
    ../include/fbxsdk/scene/geometry/fbxcamerastereo.h
    ../include/fbxsdk/scene/geometry/fbxcameraswitcher.h
    ../include/fbxsdk/scene/geometry/fbxcluster.h
    ../include/fbxsdk/scene/geometry/fbxdeformer.h
    ../include/fbxsdk/scene/geometry/fbxgenericnode.h
    ../include/fbxsdk/scene/geometry/fbxgeometry.h
    ../include/fbxsdk/scene/geometry/fbxgeometrybase.h
    ../include/fbxsdk/scene/geometry/fbxgeometryweightedmap.h
    ../include/fbxsdk/scene/geometry/fbxlayer.h
    ../include/fbxsdk/scene/geometry/fbxlayercontainer.h
    ../include/fbxsdk/scene/geometry/fbxlight.h
    ../include/fbxsdk/scene/geometry/fbxlimitsutilities.h
    ../include/fbxsdk/scene/geometry/fbxline.h
    ../include/fbxsdk/scene/geometry/fbxlodgroup.h
    ../include/fbxsdk/scene/geometry/fbxmarker.h
    ../include/fbxsdk/scene/geometry/fbxmesh.h
    ../include/fbxsdk/scene/geometry/fbxnode.h
    ../include/fbxsdk/scene/geometry/fbxnodeattribute.h
    ../include/fbxsdk/scene/geometry/fbxnull.h
    ../include/fbxsdk/scene/geometry/fbxnurbs.h
    ../include/fbxsdk/scene/geometry/fbxnurbscurve.h
    ../include/fbxsdk/scene/geometry/fbxnurbssurface.h
    ../include/fbxsdk/scene/geometry/fbxopticalreference.h
    ../include/fbxsdk/scene/geometry/fbxpatch.h
    ../include/fbxsdk/scene/geometry/fbxproceduralgeometry.h
    ../include/fbxsdk/scene/geometry/fbxshape.h
    ../include/fbxsdk/scene/geometry/fbxskeleton.h
    ../include/fbxsdk/scene/geometry/fbxskin.h
    ../include/fbxsdk/scene/geometry/fbxsubdeformer.h
    ../include/fbxsdk/scene/geometry/fbxsubdiv.h
    ../include/fbxsdk/scene/geometry/fbxtrimnurbssurface.h
    ../include/fbxsdk/scene/geometry/fbxvertexcachedeformer.h
    ../include/fbxsdk/scene/geometry/fbxweightedmapping.h
    ../include/fbxsdk/scene/shading/fbxbindingoperator.h
    ../include/fbxsdk/scene/shading/fbxbindingsentryview.h
    ../include/fbxsdk/scene/shading/fbxbindingtable.h
    ../include/fbxsdk/scene/shading/fbxbindingtablebase.h
    ../include/fbxsdk/scene/shading/fbxbindingtableentry.h
    ../include/fbxsdk/scene/shading/fbxconstantentryview.h
    ../include/fbxsdk/scene/shading/fbxentryview.h
    ../include/fbxsdk/scene/shading/fbxfiletexture.h
    ../include/fbxsdk/scene/shading/fbximplementation.h
    ../include/fbxsdk/scene/shading/fbximplementationfilter.h
    ../include/fbxsdk/scene/shading/fbximplementationutils.h
    ../include/fbxsdk/scene/shading/fbxlayeredtexture.h
    ../include/fbxsdk/scene/shading/fbxlayerentryview.h
    ../include/fbxsdk/scene/shading/fbxoperatorentryview.h
    ../include/fbxsdk/scene/shading/fbxproceduraltexture.h
    ../include/fbxsdk/scene/shading/fbxpropertyentryview.h
    ../include/fbxsdk/scene/shading/fbxsemanticentryview.h
    ../include/fbxsdk/scene/shading/fbxshadingconventions.h
    ../include/fbxsdk/scene/shading/fbxsurfacelambert.h
    ../include/fbxsdk/scene/shading/fbxsurfacematerial.h
    ../include/fbxsdk/scene/shading/fbxsurfacephong.h
    ../include/fbxsdk/scene/shading/fbxtexture.h
    ../include/fbxsdk/scene/fbxaxissystem.h
    ../include/fbxsdk/scene/fbxcollection.h
    ../include/fbxsdk/scene/fbxcollectionexclusive.h
    ../include/fbxsdk/scene/fbxcontainer.h
    ../include/fbxsdk/scene/fbxcontainertemplate.h
    ../include/fbxsdk/scene/fbxdisplaylayer.h
    ../include/fbxsdk/scene/fbxdocument.h
    ../include/fbxsdk/scene/fbxdocumentinfo.h
    ../include/fbxsdk/scene/fbxenvironment.h
    ../include/fbxsdk/scene/fbxgroupname.h
    ../include/fbxsdk/scene/fbxlibrary.h
    ../include/fbxsdk/scene/fbxobjectfilter.h
    ../include/fbxsdk/scene/fbxobjectmetadata.h
    ../include/fbxsdk/scene/fbxobjectscontainer.h
    ../include/fbxsdk/scene/fbxpose.h
    ../include/fbxsdk/scene/fbxreference.h
    ../include/fbxsdk/scene/fbxscene.h
    ../include/fbxsdk/scene/fbxselectionnode.h
    ../include/fbxsdk/scene/fbxselectionset.h
    ../include/fbxsdk/scene/fbxtakeinfo.h
    ../include/fbxsdk/scene/fbxthumbnail.h
    ../include/fbxsdk/scene/fbxvideo.h
    ../include/fbxsdk/utils/fbxclonemanager.h
    ../include/fbxsdk/utils/fbxdeformationsevaluator.h
    ../include/fbxsdk/utils/fbxembeddedfilesaccumulator.h
    ../include/fbxsdk/utils/fbxgeometryconverter.h
    ../include/fbxsdk/utils/fbxmanipulators.h
    ../include/fbxsdk/utils/fbxmaterialconverter.h
    ../include/fbxsdk/utils/fbxnamehandler.h
    ../include/fbxsdk/utils/fbxprocessor.h
    ../include/fbxsdk/utils/fbxprocessorshaderdependency.h
    ../include/fbxsdk/utils/fbxprocessorxref.h
    ../include/fbxsdk/utils/fbxprocessorxrefuserlib.h
    ../include/fbxsdk/utils/fbxrenamingstrategy.h
    ../include/fbxsdk/utils/fbxrenamingstrategybase.h
    ../include/fbxsdk/utils/fbxrenamingstrategyfbx5.h
    ../include/fbxsdk/utils/fbxrenamingstrategyfbx6.h
    ../include/fbxsdk/utils/fbxrenamingstrategyfbx7.h
    ../include/fbxsdk/utils/fbxrenamingstrategyutilities.h
    ../include/fbxsdk/utils/fbxrootnodeutility.h
    ../include/fbxsdk/utils/fbxusernotification.h
    ../include/fbxsdk/fbxsdk_def.h
    ../include/fbxsdk/fbxsdk_nsbegin.h
    ../include/fbxsdk/fbxsdk_nsend.h
    ../include/fbxsdk/fbxsdk_version.h
    ../include/opengl/assimp/Compiler/poppack1.h
    ../include/opengl/assimp/Compiler/pushpack1.h
    ../include/opengl/assimp/ai_assert.h
    ../include/opengl/assimp/anim.h
    ../include/opengl/assimp/camera.h
    ../include/opengl/assimp/cexport.h
    ../include/opengl/assimp/cfileio.h
    ../include/opengl/assimp/cimport.h
    ../include/opengl/assimp/color4.h
    ../include/opengl/assimp/config.h
    ../include/opengl/assimp/DefaultLogger.hpp
    ../include/opengl/assimp/defs.h
    ../include/opengl/assimp/Exporter.hpp
    ../include/opengl/assimp/Importer.hpp
    ../include/opengl/assimp/importerdesc.h
    ../include/opengl/assimp/IOStream.hpp
    ../include/opengl/assimp/IOSystem.hpp
    ../include/opengl/assimp/light.h
    ../include/opengl/assimp/Logger.hpp
    ../include/opengl/assimp/LogStream.hpp
    ../include/opengl/assimp/material.h
    ../include/opengl/assimp/matrix3x3.h
    ../include/opengl/assimp/matrix4x4.h
    ../include/opengl/assimp/mesh.h
    ../include/opengl/assimp/NullLogger.hpp
    ../include/opengl/assimp/postprocess.h
    ../include/opengl/assimp/ProgressHandler.hpp
    ../include/opengl/assimp/quaternion.h
    ../include/opengl/assimp/scene.h
    ../include/opengl/assimp/texture.h
    ../include/opengl/assimp/types.h
    ../include/opengl/assimp/vector2.h
    ../include/opengl/assimp/vector3.h
    ../include/opengl/assimp/version.h
    ../include/opengl/GL/freeglut.h
    ../include/opengl/GL/freeglut_ext.h
    ../include/opengl/GL/freeglut_std.h
    ../include/opengl/GL/glew.h
    ../include/opengl/GL/glut.h
    ../include/opengl/GL/glxew.h
    ../include/opengl/GL/wglew.h
    ../include/opengl/GLFW/glfw3.h
    ../include/opengl/GLFW/glfw3native.h
    ../include/opengl/ImageMagick-6/magick/accelerate.h
    ../include/opengl/ImageMagick-6/magick/animate-private.h
    ../include/opengl/ImageMagick-6/magick/animate.h
    ../include/opengl/ImageMagick-6/magick/annotate.h
    ../include/opengl/ImageMagick-6/magick/api.h
    ../include/opengl/ImageMagick-6/magick/artifact.h
    ../include/opengl/ImageMagick-6/magick/attribute.h
    ../include/opengl/ImageMagick-6/magick/blob-private.h
    ../include/opengl/ImageMagick-6/magick/blob.h
    ../include/opengl/ImageMagick-6/magick/cache-private.h
    ../include/opengl/ImageMagick-6/magick/cache-view.h
    ../include/opengl/ImageMagick-6/magick/cache.h
    ../include/opengl/ImageMagick-6/magick/channel.h
    ../include/opengl/ImageMagick-6/magick/cipher.h
    ../include/opengl/ImageMagick-6/magick/client.h
    ../include/opengl/ImageMagick-6/magick/coder.h
    ../include/opengl/ImageMagick-6/magick/color-private.h
    ../include/opengl/ImageMagick-6/magick/color.h
    ../include/opengl/ImageMagick-6/magick/colormap-private.h
    ../include/opengl/ImageMagick-6/magick/colormap.h
    ../include/opengl/ImageMagick-6/magick/colorspace-private.h
    ../include/opengl/ImageMagick-6/magick/colorspace.h
    ../include/opengl/ImageMagick-6/magick/compare.h
    ../include/opengl/ImageMagick-6/magick/composite-private.h
    ../include/opengl/ImageMagick-6/magick/composite.h
    ../include/opengl/ImageMagick-6/magick/compress.h
    ../include/opengl/ImageMagick-6/magick/configure.h
    ../include/opengl/ImageMagick-6/magick/constitute.h
    ../include/opengl/ImageMagick-6/magick/decorate.h
    ../include/opengl/ImageMagick-6/magick/delegate-private.h
    ../include/opengl/ImageMagick-6/magick/delegate.h
    ../include/opengl/ImageMagick-6/magick/deprecate.h
    ../include/opengl/ImageMagick-6/magick/display-private.h
    ../include/opengl/ImageMagick-6/magick/display.h
    ../include/opengl/ImageMagick-6/magick/distort.h
    ../include/opengl/ImageMagick-6/magick/draw-private.h
    ../include/opengl/ImageMagick-6/magick/draw.h
    ../include/opengl/ImageMagick-6/magick/effect.h
    ../include/opengl/ImageMagick-6/magick/enhance.h
    ../include/opengl/ImageMagick-6/magick/exception-private.h
    ../include/opengl/ImageMagick-6/magick/exception.h
    ../include/opengl/ImageMagick-6/magick/feature.h
    ../include/opengl/ImageMagick-6/magick/fourier.h
    ../include/opengl/ImageMagick-6/magick/fx-private.h
    ../include/opengl/ImageMagick-6/magick/fx.h
    ../include/opengl/ImageMagick-6/magick/gem.h
    ../include/opengl/ImageMagick-6/magick/geometry.h
    ../include/opengl/ImageMagick-6/magick/hashmap.h
    ../include/opengl/ImageMagick-6/magick/histogram.h
    ../include/opengl/ImageMagick-6/magick/identify.h
    ../include/opengl/ImageMagick-6/magick/image-private.h
    ../include/opengl/ImageMagick-6/magick/image-view.h
    ../include/opengl/ImageMagick-6/magick/image.h
    ../include/opengl/ImageMagick-6/magick/ImageMagick.h
    ../include/opengl/ImageMagick-6/magick/layer.h
    ../include/opengl/ImageMagick-6/magick/list.h
    ../include/opengl/ImageMagick-6/magick/locale_.h
    ../include/opengl/ImageMagick-6/magick/log.h
    ../include/opengl/ImageMagick-6/magick/mac.h
    ../include/opengl/ImageMagick-6/magick/magic.h
    ../include/opengl/ImageMagick-6/magick/magick-config.h
    ../include/opengl/ImageMagick-6/magick/magick-type.h
    ../include/opengl/ImageMagick-6/magick/magick.h
    ../include/opengl/ImageMagick-6/magick/MagickCore.h
    ../include/opengl/ImageMagick-6/magick/matrix.h
    ../include/opengl/ImageMagick-6/magick/memory-private.h
    ../include/opengl/ImageMagick-6/magick/memory_.h
    ../include/opengl/ImageMagick-6/magick/method-attribute.h
    ../include/opengl/ImageMagick-6/magick/methods.h
    ../include/opengl/ImageMagick-6/magick/mime-private.h
    ../include/opengl/ImageMagick-6/magick/mime.h
    ../include/opengl/ImageMagick-6/magick/module.h
    ../include/opengl/ImageMagick-6/magick/monitor-private.h
    ../include/opengl/ImageMagick-6/magick/monitor.h
    ../include/opengl/ImageMagick-6/magick/montage.h
    ../include/opengl/ImageMagick-6/magick/morphology-private.h
    ../include/opengl/ImageMagick-6/magick/morphology.h
    ../include/opengl/ImageMagick-6/magick/nt-base.h
    ../include/opengl/ImageMagick-6/magick/nt-feature.h
    ../include/opengl/ImageMagick-6/magick/option.h
    ../include/opengl/ImageMagick-6/magick/paint.h
    ../include/opengl/ImageMagick-6/magick/pixel-accessor.h
    ../include/opengl/ImageMagick-6/magick/pixel-private.h
    ../include/opengl/ImageMagick-6/magick/pixel.h
    ../include/opengl/ImageMagick-6/magick/policy.h
    ../include/opengl/ImageMagick-6/magick/prepress.h
    ../include/opengl/ImageMagick-6/magick/PreRvIcccm.h
    ../include/opengl/ImageMagick-6/magick/profile.h
    ../include/opengl/ImageMagick-6/magick/property.h
    ../include/opengl/ImageMagick-6/magick/quantize.h
    ../include/opengl/ImageMagick-6/magick/quantum-private.h
    ../include/opengl/ImageMagick-6/magick/quantum.h
    ../include/opengl/ImageMagick-6/magick/random-private.h
    ../include/opengl/ImageMagick-6/magick/random_.h
    ../include/opengl/ImageMagick-6/magick/registry.h
    ../include/opengl/ImageMagick-6/magick/resample-private.h
    ../include/opengl/ImageMagick-6/magick/resample.h
    ../include/opengl/ImageMagick-6/magick/resize-private.h
    ../include/opengl/ImageMagick-6/magick/resize.h
    ../include/opengl/ImageMagick-6/magick/resource_.h
    ../include/opengl/ImageMagick-6/magick/segment.h
    ../include/opengl/ImageMagick-6/magick/semaphore-private.h
    ../include/opengl/ImageMagick-6/magick/semaphore.h
    ../include/opengl/ImageMagick-6/magick/shear.h
    ../include/opengl/ImageMagick-6/magick/signature-private.h
    ../include/opengl/ImageMagick-6/magick/signature.h
    ../include/opengl/ImageMagick-6/magick/splay-tree.h
    ../include/opengl/ImageMagick-6/magick/static.h
    ../include/opengl/ImageMagick-6/magick/statistic.h
    ../include/opengl/ImageMagick-6/magick/stream-private.h
    ../include/opengl/ImageMagick-6/magick/stream.h
    ../include/opengl/ImageMagick-6/magick/string-private.h
    ../include/opengl/ImageMagick-6/magick/string_.h
    ../include/opengl/ImageMagick-6/magick/studio.h
    ../include/opengl/ImageMagick-6/magick/thread-private.h
    ../include/opengl/ImageMagick-6/magick/thread_.h
    ../include/opengl/ImageMagick-6/magick/threshold.h
    ../include/opengl/ImageMagick-6/magick/timer.h
    ../include/opengl/ImageMagick-6/magick/token-private.h
    ../include/opengl/ImageMagick-6/magick/token.h
    ../include/opengl/ImageMagick-6/magick/transform.h
    ../include/opengl/ImageMagick-6/magick/type.h
    ../include/opengl/ImageMagick-6/magick/utility-private.h
    ../include/opengl/ImageMagick-6/magick/utility.h
    ../include/opengl/ImageMagick-6/magick/version.h
    ../include/opengl/ImageMagick-6/magick/vms.h
    ../include/opengl/ImageMagick-6/magick/widget.h
    ../include/opengl/ImageMagick-6/magick/xml-tree.h
    ../include/opengl/ImageMagick-6/magick/xwindow-private.h
    ../include/opengl/ImageMagick-6/magick/xwindow.h
    ../include/opengl/ImageMagick-6/Magick++/Blob.h
    ../include/opengl/ImageMagick-6/Magick++/BlobRef.h
    ../include/opengl/ImageMagick-6/Magick++/CoderInfo.h
    ../include/opengl/ImageMagick-6/Magick++/Color.h
    ../include/opengl/ImageMagick-6/Magick++/Drawable.h
    ../include/opengl/ImageMagick-6/Magick++/Exception.h
    ../include/opengl/ImageMagick-6/Magick++/Functions.h
    ../include/opengl/ImageMagick-6/Magick++/Geometry.h
    ../include/opengl/ImageMagick-6/Magick++/Image.h
    ../include/opengl/ImageMagick-6/Magick++/ImageRef.h
    ../include/opengl/ImageMagick-6/Magick++/Include.h
    ../include/opengl/ImageMagick-6/Magick++/Montage.h
    ../include/opengl/ImageMagick-6/Magick++/Options.h
    ../include/opengl/ImageMagick-6/Magick++/Pixels.h
    ../include/opengl/ImageMagick-6/Magick++/STL.h
    ../include/opengl/ImageMagick-6/Magick++/Thread.h
    ../include/opengl/ImageMagick-6/Magick++/TypeMetric.h
    ../include/opengl/ImageMagick-6/wand/animate.h
    ../include/opengl/ImageMagick-6/wand/compare.h
    ../include/opengl/ImageMagick-6/wand/composite.h
    ../include/opengl/ImageMagick-6/wand/conjure.h
    ../include/opengl/ImageMagick-6/wand/convert.h
    ../include/opengl/ImageMagick-6/wand/deprecate.h
    ../include/opengl/ImageMagick-6/wand/display.h
    ../include/opengl/ImageMagick-6/wand/drawing-wand.h
    ../include/opengl/ImageMagick-6/wand/identify.h
    ../include/opengl/ImageMagick-6/wand/import.h
    ../include/opengl/ImageMagick-6/wand/magick-image.h
    ../include/opengl/ImageMagick-6/wand/magick-property.h
    ../include/opengl/ImageMagick-6/wand/magick-wand-private.h
    ../include/opengl/ImageMagick-6/wand/magick-wand.h
    ../include/opengl/ImageMagick-6/wand/magick_wand.h
    ../include/opengl/ImageMagick-6/wand/MagickWand.h
    ../include/opengl/ImageMagick-6/wand/method-attribute.h
    ../include/opengl/ImageMagick-6/wand/mogrify-private.h
    ../include/opengl/ImageMagick-6/wand/mogrify.h
    ../include/opengl/ImageMagick-6/wand/montage.h
    ../include/opengl/ImageMagick-6/wand/pixel-iterator.h
    ../include/opengl/ImageMagick-6/wand/pixel-wand-private.h
    ../include/opengl/ImageMagick-6/wand/pixel-wand.h
    ../include/opengl/ImageMagick-6/wand/stream.h
    ../include/opengl/ImageMagick-6/wand/studio.h
    ../include/opengl/ImageMagick-6/wand/wand-config.h
    ../include/opengl/ImageMagick-6/wand/wand-view.h
    ../include/opengl/ImageMagick-6/wand/wand.h
    ../include/opengl/ImageMagick-6/Magick++.h
    ../include/opengl/glfx.h
    ../include/opengl/ogldev_app.h
    ../include/opengl/ogldev_backend.h
    ../include/opengl/ogldev_basic_lighting.h
    ../include/opengl/ogldev_basic_mesh.h
    ../include/opengl/ogldev_callbacks.h
    ../include/opengl/ogldev_camera.h
    ../include/opengl/ogldev_cubemap_texture.h
    ../include/opengl/ogldev_engine_common.h
    ../include/opengl/ogldev_glfw_backend.h
    ../include/opengl/ogldev_glut_backend.h
    ../include/opengl/ogldev_io_buffer.h
    ../include/opengl/ogldev_keys.h
    ../include/opengl/ogldev_math_3d.h
    ../include/opengl/ogldev_pipeline.h
    ../include/opengl/ogldev_random_texture.h
    ../include/opengl/ogldev_skinned_mesh.h
    ../include/opengl/ogldev_texture.h
    ../include/opengl/ogldev_types.h
    ../include/opengl/ogldev_util.h
    ../include/opengl/technique.h
    ../lib/directx/x64/Debug/d2d1.lib
    ../lib/directx/x64/Debug/d3d10.lib
    ../lib/directx/x64/Debug/d3d10_1.lib
    ../lib/directx/x64/Debug/d3d11.lib
    ../lib/directx/x64/Debug/d3d9.lib
    ../lib/directx/x64/Debug/d3dcompiler.lib
    ../lib/directx/x64/Debug/D3DCSX.lib
    ../lib/directx/x64/Debug/D3DCSXd.lib
    ../lib/directx/x64/Debug/d3dx10.lib
    ../lib/directx/x64/Debug/d3dx10d.lib
    ../lib/directx/x64/Debug/d3dx11.lib
    ../lib/directx/x64/Debug/d3dx11d.lib
    ../lib/directx/x64/Debug/d3dx9.lib
    ../lib/directx/x64/Debug/d3dx9d.lib
    ../lib/directx/x64/Debug/d3dxof.lib
    ../lib/directx/x64/Debug/dinput8.lib
    ../lib/directx/x64/Debug/dsound.lib
    ../lib/directx/x64/Debug/dwrite.lib
    ../lib/directx/x64/Debug/DxErr.lib
    ../lib/directx/x64/Debug/dxgi.lib
    ../lib/directx/x64/Debug/dxguid.lib
    ../lib/directx/x64/Debug/libfbxsdk.lib
    ../lib/directx/x64/Debug/X3DAudio.lib
    ../lib/directx/x64/Debug/xapobase.lib
    ../lib/directx/x64/Debug/xapobased.lib
    ../lib/directx/x64/Debug/XAPOFX.lib
    ../lib/directx/x64/Debug/XInput.lib
    ../lib/directx/x64/Release/d2d1.lib
    ../lib/directx/x64/Release/d3d10.lib
    ../lib/directx/x64/Release/d3d10_1.lib
    ../lib/directx/x64/Release/d3d11.lib
    ../lib/directx/x64/Release/d3d9.lib
    ../lib/directx/x64/Release/d3dcompiler.lib
    ../lib/directx/x64/Release/D3DCSX.lib
    ../lib/directx/x64/Release/D3DCSXd.lib
    ../lib/directx/x64/Release/d3dx10.lib
    ../lib/directx/x64/Release/d3dx10d.lib
    ../lib/directx/x64/Release/d3dx11.lib
    ../lib/directx/x64/Release/d3dx11d.lib
    ../lib/directx/x64/Release/d3dx9.lib
    ../lib/directx/x64/Release/d3dx9d.lib
    ../lib/directx/x64/Release/d3dxof.lib
    ../lib/directx/x64/Release/dinput8.lib
    ../lib/directx/x64/Release/dsound.lib
    ../lib/directx/x64/Release/dwrite.lib
    ../lib/directx/x64/Release/DxErr.lib
    ../lib/directx/x64/Release/dxgi.lib
    ../lib/directx/x64/Release/dxguid.lib
    ../lib/directx/x64/Release/libfbxsdk.lib
    ../lib/directx/x64/Release/X3DAudio.lib
    ../lib/directx/x64/Release/xapobase.lib
    ../lib/directx/x64/Release/xapobased.lib
    ../lib/directx/x64/Release/XAPOFX.lib
    ../lib/directx/x64/Release/XInput.lib
    ../lib/directx/x86/Debug/d2d1.lib
    ../lib/directx/x86/Debug/d3d10.lib
    ../lib/directx/x86/Debug/d3d10_1.lib
    ../lib/directx/x86/Debug/d3d11.lib
    ../lib/directx/x86/Debug/d3d9.lib
    ../lib/directx/x86/Debug/d3dcompiler.lib
    ../lib/directx/x86/Debug/D3DCSX.lib
    ../lib/directx/x86/Debug/D3DCSXd.lib
    ../lib/directx/x86/Debug/d3dx10.lib
    ../lib/directx/x86/Debug/d3dx10d.lib
    ../lib/directx/x86/Debug/d3dx11.lib
    ../lib/directx/x86/Debug/d3dx11d.lib
    ../lib/directx/x86/Debug/d3dx9.lib
    ../lib/directx/x86/Debug/d3dx9d.lib
    ../lib/directx/x86/Debug/d3dxof.lib
    ../lib/directx/x86/Debug/dinput8.lib
    ../lib/directx/x86/Debug/dsetup.lib
    ../lib/directx/x86/Debug/dsound.lib
    ../lib/directx/x86/Debug/dwrite.lib
    ../lib/directx/x86/Debug/DxErr.lib
    ../lib/directx/x86/Debug/dxgi.lib
    ../lib/directx/x86/Debug/dxguid.lib
    ../lib/directx/x86/Debug/FW1FontWrapper.lib
    ../lib/directx/x86/Debug/libfbxsdk.lib
    ../lib/directx/x86/Debug/X3DAudio.lib
    ../lib/directx/x86/Debug/xapobase.lib
    ../lib/directx/x86/Debug/xapobased.lib
    ../lib/directx/x86/Debug/XAPOFX.lib
    ../lib/directx/x86/Debug/XInput.lib
    ../lib/directx/x86/Release/d2d1.lib
    ../lib/directx/x86/Release/d3d10.lib
    ../lib/directx/x86/Release/d3d10_1.lib
    ../lib/directx/x86/Release/d3d11.lib
    ../lib/directx/x86/Release/d3d9.lib
    ../lib/directx/x86/Release/d3dcompiler.lib
    ../lib/directx/x86/Release/D3DCSX.lib
    ../lib/directx/x86/Release/D3DCSXd.lib
    ../lib/directx/x86/Release/d3dx10.lib
    ../lib/directx/x86/Release/d3dx10d.lib
    ../lib/directx/x86/Release/d3dx11.lib
    ../lib/directx/x86/Release/d3dx11d.lib
    ../lib/directx/x86/Release/d3dx9.lib
    ../lib/directx/x86/Release/d3dx9d.lib
    ../lib/directx/x86/Release/d3dxof.lib
    ../lib/directx/x86/Release/dinput8.lib
    ../lib/directx/x86/Release/dsetup.lib
    ../lib/directx/x86/Release/dsound.lib
    ../lib/directx/x86/Release/dwrite.lib
    ../lib/directx/x86/Release/DxErr.lib
    ../lib/directx/x86/Release/dxgi.lib
    ../lib/directx/x86/Release/dxguid.lib
    ../lib/directx/x86/Release/FW1FontWrapper.lib
    ../lib/directx/x86/Release/libfbxsdk.lib
    ../lib/directx/x86/Release/X3DAudio.lib
    ../lib/directx/x86/Release/xapobase.lib
    ../lib/directx/x86/Release/xapobased.lib
    ../lib/directx/x86/Release/XAPOFX.lib
    ../lib/directx/x86/Release/XInput.lib
    ../lib/opengl/x64/freeglut.lib
    ../lib/opengl/assimp.lib
    ../lib/opengl/CORE_DB_Magick++_.lib
    ../lib/opengl/CORE_RL_Magick++_.lib
    ../lib/opengl/freeglut.lib
    ../lib/opengl/freeglutd.lib
    ../lib/opengl/glew32.lib
    ../lib/opengl/glew32mx.lib
    ../lib/opengl/glew32mxs.lib
    ../lib/opengl/glew32s.lib
    ../lib/opengl/glfw3.lib
    ../lib/opengl/glfw3dll.lib
    ../lib/opengl/glfx.lib
    ../lib/opengl/glfx_debug.lib
    ../lib/opengl/glfx_release.lib)

add_executable(Epitome3D ${SOURCE_FILES})